# DeployMate

./: README.md  pyproject.toml
deploymate/: __init__.py  cli.py  core.py
